# ChangeLog for media-libs/libsdl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libsdl-2.0.0_pre6963 (05 Mar 2013)

  05 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +libsdl-2.0.0_pre6963.ebuild, -Manifest,
  -files/libsdl-1.2.13-sdl-config.patch, -files/libsdl-1.2.14-click.patch,
  -files/libsdl-1.2.14-disappearingcursor.diff, -libsdl-1.2.14-r3.ebuild,
  -libsdl-9999-r2.ebuild, libsdl-2.0.0_pre6799.ebuild, metadata.xml:
  [media-libs/libsdl] Bump to 6963 revision, remove old obsolete 1.2.14 and
  buggy 9999-r2, metadata cleanup.

  07 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> libsdl-2.0.0_pre6799.ebuild:
  Use versionator eclass for getting revision

*libsdl-2.0.0_pre6799 (04 Jan 2013)

  04 Jan 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +libsdl-2.0.0_pre6799.ebuild, metadata.xml:
  [media-libs/libsdl] Experimental ebuild for 2.0

*libsdl-1.2.14-r3 (01 Jul 2010)

  01 Jul 2010; Locke Shinseiko <wizzleby@gmail.com>
  +files/libsdl-1.2.13-sdl-config.patch, +files/libsdl-1.2.14-click.patch,
  +files/libsdl-1.2.14-disappearingcursor.diff, +libsdl-1.2.14-r3.ebuild,
  +metadata.xml:
  1.2.14-r3] Sync from tree, revbump, add patch to fix bug #
          patch added: libsdl-1.2.14-disappearingcursor.diff, from debian
  patch tracker,
          fixes the bug introduced by libsdl-1.2.14-click.patch (also from
  debian)