@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libsdl-2.0.0_pre6963-r1 (11 Mar 2013)
+
+  11 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
+  +libsdl-2.0.0_pre6963-r1.ebuild, -libsdl-2.0.0_pre6963.ebuild:
+  [media-libs/libsdl] Playing with multilib eclass.
+
 *libsdl-2.0.0_pre6963 (05 Mar 2013)
 
   05 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
